# cppesphome-api

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Config.cmake.in  dependencies.cmake
cppesphome/: CMakeLists.txt  main.cpp
cppesphome_api/: CMakeLists.txt  api.proto  api_options.proto
cppesphomeapi/: CMakeLists.txt  api.proto  api_options.proto  version.hpp.in
cppesphomeapi/include/cppesphomeapi/: api_client.hpp  api_version.hpp  async_result.hpp  commands.hpp  device_info.hpp  entity.hpp  log_entry.hpp  result.hpp  state.hpp
cppesphomeapi/include/cppesphomeapi/commands/: light_command.hpp
cppesphomeapi/include/cppesphomeapi/detail/: awaitable.hpp
cppesphomeapi/src/: CMakeLists.txt  api_client.cpp  api_connection.cpp  api_connection.hpp  entity_conversion.cpp  entity_conversion.hpp  executor.hpp  get_message_id.hpp  make_unexpected_result.cpp  make_unexpected_result.hpp  message_erasure.hpp  message_wrapper.hpp  net.cpp  net.hpp  overloaded.hpp  plain_text_protocol.cpp  plain_text_protocol.hpp  state_conversion.cpp  state_conversion.hpp  tcp.hpp
example/: CMakeLists.txt  main.cpp
